--- a/templates/home.html
+++ b/templates/home.html
@@ -82,62 +82,62 @@
             <!-- products -->
             <section class="products" id="products">
                 <div class="heading">
-                    <h2>Our popular products</h2>
+                    <h2>Our new products</h2>
                 </div>
 
                 <!-- container -->
                 <div class="products-container">
                     <div class="box">
-                        <img src="{% static 'images/pic1.jpg'%}" alt="Pistachio - 50gm">
+                        <img src="{% static 'images/product/pic1.png'%}" alt="Pistachio - 50gm">
                         <h3>Pistachios - 50gm</h3>
                         <div class="content">
                             <span>$25</span>
-                            <a href="#"> Add to cart</a>
+                            <a href="#">New</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <img src="{% static 'images/pic2.jpg'%}" alt="Cashews - 50gm">
+                        <img src="{% static 'images/product/pic2.png'%}" alt="Cashews - 50gm">
                         <h3>Cashews - 50gm</h3>
                         <div class="content">
                             <span>$20</span>
-                            <a href="#"> Add to cart</a>
+                            <a href="#">New</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <img src="{% static 'images/pic3.jpg'%}" alt="Mixed Nuts - 50gm">
+                        <img src="{% static 'images/product/pic3.png'%}" alt="Mixed Nuts - 50gm">
                         <h3>Mixed Nuts - 50gm</h3>
                         <div class="content">
                             <span>$23</span>
-                            <a href="#"> Add to cart</a>
+                            <a href="#">New</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <img src="{% static 'images/pic4.jpg'%}" alt="Almonds - 50gm">
+                        <img src="{% static 'images/product/pic4.png'%}" alt="Almonds - 50gm">
                         <h3>Almonds - 50gm</h3>
                         <div class="content">
                             <span>$18</span>
-                            <a href="#"> Add to cart</a>
+                            <a href="#">New</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <img src="{% static 'images/pic5.jpg'%}" alt="Smoked Almonds - 25gm">
+                        <img src="{% static 'images/product/pic5.png'%}" alt="Smoked Almonds - 25gm">
                         <h3>Smoked Almonds - 25gm</h3>
                         <div class="content">
                             <span>$12</span>
-                            <a href="#"> Add to cart</a>
+                            <a href="#">New</a>
                         </div>
                     </div>
 
                     <div class="box">
-                        <img src="{% static 'images/pic6.jpg'%}" alt="Trail Mix - 25gm">
+                        <img src="{% static 'images/product/pic6.png'%}" alt="Trail Mix - 25gm">
                         <h3>Trail Mix - 25gm</h3>
                         <div class="content">
                             <span>$15</span>
-                            <a href="#"> Add to cart</a>
+                            <a href="#">New</a>
                         </div>
                     </div>
 
