design product view

--- a/templates/product_view.html
+++ b/templates/product_view.html
@@ -1,6 +1,30 @@
 {% extends 'product_base.html' %}
+{% load static %}
 {% block content %}
 <br><br><br>
+
+<!-- products -->
+<section class="products" id="products">
+    <div class="heading">
+        <h2>Our new products</h2>
+    </div>
+
+    <!-- container -->
+    {% for product in product_list %}
+    <div class="post-entry">
+    <div class="products-container">
+        <div class="box">
+            <img src="{{ product.img.url }}" alt="Pistachio">
+            <h3><a href="{% url 'product_detail' product.pk %}">{{ product.name }}</a></h3>
+            <div class="content">
+                <span>${{ product.price }}</span>
+                <a href="#">Add to cart</a>
+            </div>
+        </div>
+    </div>
+    </div>
+    {% endfor %}
+</section>
 
 {% for product in product_list %}
 <div class="post-entry">
