--- a/templates/product_delete.html
+++ b/templates/product_delete.html
@@ -4,7 +4,7 @@
 
 <h1>Delete product</h1>
 <form action="" method="post">{% csrf_token %}
-<p>Are you sure you want to delete <strong>"{{ product.name }}"</strong> from <strong>"{{ product.price }}"</strong>?</p>
+<p>Are you sure you want to delete <strong>"{{ product.name }}"</strong> from <strong>"{{ product.supplier }}"</strong>?</p>
 <br>
 <input type="submit" value="Confirm">
 </form>
