add more models examples

--- a/templates/product_view.html
+++ b/templates/product_view.html
@@ -11,21 +11,43 @@
 
     <!-- container -->
     {% for product in product_list %}
-    <div class="post-entry">
+    <div class="post-entry"> 
     <div class="products-container">
         <div class="box">
-            <img src="{{ product.img.url }}" alt="Pistachio">
+            <img src="{{ product.img.url }}" alt={{ product.name }}>
             <h3><a href="{% url 'product_detail' product.pk %}">{{ product.name }}</a></h3>
             <div class="content">
                 <span>${{ product.price }}</span>
                 <a href="#">Add to cart</a>
             </div>
         </div>
+
+        <!-- تکرار۱-->
+        <div class="box">
+            <img src="{{ product.img.url }}" alt={{ product.name }}>
+            <h3><a href="{% url 'product_detail' product.pk %}">{{ product.name }}</a></h3>
+            <div class="content">
+                <span>${{ product.price }}</span>
+                <a href="#">Add to cart</a>
+            </div>
+        </div>
+
+        <!-- تکرار۲-->
+        <div class="box">
+            <img src="{{ product.img.url }}" alt={{ product.name }}>
+            <h3><a href="{% url 'product_detail' product.pk %}">{{ product.name }}</a></h3>
+            <div class="content">
+                <span>${{ product.price }}</span>
+                <a href="#">Add to cart</a>
+            </div>
+        </div>
+
     </div>
-    </div>
+    </div>  
     {% endfor %}
 </section>
 
+<!--
 {% for product in product_list %}
 <div class="post-entry">
 <h2><a href="{% url 'product_detail' product.pk %}">{{ product.name }}</a></h2>
@@ -33,5 +55,6 @@
 <p><img src="{{ product.img.url }}"></p>
 </div>
 {% endfor %}
+-->
 
 {% endblock content %}
