--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,57 +1,45 @@
-{% extends 'product_base.html' %} 
+{% extends 'register_base.html' %}
+{% load static %}
+
+<head>
+    <title>Log in</title>
+    {% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesLogin.css' %}">
+    {% endblock %}
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU10w440vq8XeBPOrYEONXDKmSpa4j6I4TjcKPEQ2Or5J6"
+    crossorigin="anonymous">
+</head>
+
 {% block content %}
-<div class="hero min-h-screen bg-base-200">
-  <div class="hero-content flex-col">
-    
-    <div class="card flex-shrink-0 w-full max-w-sm shadow-2xl bg-base-100">
-      <div class="card-body">
-        <div class="text-2xl font-black text-center text-primary">ورود</div>
-        <form method="post">
-          {% csrf_token %}
-          <span class="text-error text-sm">{{ form.non_field_errors }}</span>
-          <div class="form-control">
-            <label class="label" for="id_username">
-              <span class="label-text">نام کاربری:</span>
-            </label>
-            <input
-              type="text"
-              class="input input-bordered"
-              name="username"
-              autofocus
-              autocapitalize="none"
-              autocomplete="username"
-              maxlength="150"
-              required
-              id="id_username"
-            />
-            <span class="text-error text-sm mt-2">{{ form.username.errors }}</span>
+<br>
+<div class="container-fluid">
+    <br>
+    <div class="row justify-content-center">
+      <div class="col-12 col-md-8 col-lg-6">
+        <div class="card">
+          <div class="card-header">Log in</div>
+          <div class="card-body">
+            <form method="post">
+              {% csrf_token %}
+              <div class="form-group">
+                {{ form.username.label_tag }}
+                {{ form.username }}
+              </div>
+              <div class="form-group">
+                {{ form.password.label_tag }}
+                {{ form.password }}
+              </div>
+              <button class="btn btn-primary btn-block" type="submit">log in</button>
+            </form>
+            <br>
+            <p class="mt-3 mb-0">Don't have an account yet? <a href="{% url 'signup' %}"> Sign up</a></p>
           </div>
-          <div class="form-control">
-            <label class="label" for="id_password">
-              <span class="label-text">کلمه عبور:</span>
-            </label>
-            <input
-              type="password"
-              class="input input-bordered"
-              name="password"
-              autocomplete="current-password"
-              required
-              id="id_password"
-            />
-            <span class="text-error text-sm mt-2">{{ form.password.errors }}</span>
-          </div>
-          <label class="label">
-            حساب کاربری ندارید؟
-            <a href="{% url 'signup' %}" class="link link-primary link-hover"
-              >ثبت نام کنید.</a
-            >
-          </label>
-          <div class="form-control mt-6">
-            <button class="btn btn-primary">ورود</button>
-          </div>
-        </form>
+        </div>
       </div>
     </div>
+    <br><br>
   </div>
-</div>
-{% endblock content %}
+{% endblock %}
