--- a/templates/base.html
+++ b/templates/base.html
@@ -32,6 +32,7 @@
         <div class="header-icon">
             <i class='bx bx-cart-alt'></i>
             <i class='bx bx-search' id="search-icon"></i>
+            <i class='bx bx-user-circle'></i>
         </div>
 
         <!-- search -->
