--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -24,13 +24,16 @@
           <div class="card-body">
             <form method="post">
               {% csrf_token %}
+                {{ form.non_field_errors }}
               <div class="form-group">
                 {{ form.username.label_tag }}
                 {{ form.username }}
+                {{ form.username.errors }}
               </div>
               <div class="form-group">
                 {{ form.password.label_tag }}
                 {{ form.password }}
+                {{ form.password.errors }}
               </div>
               <button class="btn btn-primary btn-block" type="submit">log in</button>
             </form>
