--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -23,37 +23,46 @@
           <div class="card-body">
             <form method="post">
               {% csrf_token %}
+                {{ form.non_field_errors }}
               <div class="form-group">
                 {{ form.username.label_tag }}
                 {{ form.username }}
+                {{ form.username.errors }}
               </div>
               <div class="form-group">
                 {{ form.first_name.label_tag }}
                 {{ form.first_name }}
+                {{ form.first_name.errors }}
               </div>
               <div class="form-group">
                 {{ form.last_name.label_tag }}
                 {{ form.last_name }}
+                {{ form.last_name.errors }}
               </div>
               <div class="form-group">
                 {{ form.email.label_tag }}
                 {{ form.email }}
+                {{ form.email.errors }}
               </div>
               <div class="form-group">
                 {{ form.city.label_tag }}
                 {{ form.city }}
+                {{ form.city.errors }}
               </div>
               <div class="form-group">
                 {{ form.phone_number.label_tag }}
                 {{ form.phone_number }}
+                {{ form.phone_number.errors }}
               </div>
               <div class="form-group">
                 {{ form.password1.label_tag }}
                 {{ form.password1 }}
+                {{ form.password1.errors }}
               </div>
               <div class="form-group">
                 {{ form.password2.label_tag }}
                 {{ form.password2 }}
+                {{ form.password2.errors }}
               </div>
               <button class="btn btn-primary btn-block" type="submit">Sign up</button>
             </form>
