--- a/static/css/stylesPanel.css
+++ b/static/css/stylesPanel.css
@@ -1,11 +1,19 @@
+/* google fonts */
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@500&display=swap');
+
+.title{
+    font-family: 'Raleway', sans-serif;
+    font-size: 30px;
+}
+
 * {
     margin: 0;
     padding: 0;
     font-family: "Cairo", sans-serif;
   }
   .features {
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
   .features .container {
     margin: 0 auto;
@@ -17,7 +25,9 @@
   .features .container .box {
     border: 1px solid #ccc;
     max-width: 400px;
+    width: 300px;
   }
+  /*
   .features .container .image {
     background-color: #777;
     height: 200px;
@@ -55,7 +65,7 @@
   }
   .features .container .image img {
     max-width: 100%;
-  }
+  } */
   .features .container .box .text {
     text-align: center;
     padding: 30px;
@@ -138,3 +148,73 @@
     color: white;
   }
   
+  /**/
+  .features .container .qualitya .text h3::after {
+    background-color: rgb(147, 168, 172);
+  }
+
+  .features .container .qualitya a {
+    border-color: rgb(147, 168, 172);
+    background: linear-gradient(to right, rgb(147, 168, 172) 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    color: rgb(147, 168, 172);
+  }
+  .features .container .qualitya:hover a {
+    background-position: left bottom;
+    color: white;
+  }
+
+  /**/
+
+  .features .container .timea .text h3::after {
+    background-color: rgb(106, 76, 147);
+  }
+
+  .features .container .timea a {
+    border-color: rgb(106, 76, 147);
+    background: linear-gradient(to right, rgb(106, 76, 147) 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    color: rgb(106, 76, 147);
+  }
+  .features .container .timea:hover a {
+    background-position: left bottom;
+    color: white;
+  }
+
+  /**/
+
+  .features .container .passiona .text h3::after {
+    background-color: rgb(255, 202, 58);
+  }
+
+  .features .container .passiona a {
+    border-color: rgb(255, 202, 58);
+    background: linear-gradient(to right, rgb(255, 202, 58) 50%, white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+    color: rgb(255, 202, 58);
+  }
+  .features .container .passiona:hover a {
+    background-position: left bottom;
+    color: white;
+  }
+
+    /**/
+
+    .features .container .timeb .text h3::after {
+        background-color: rgb(188, 108, 37);
+      }
+    
+      .features .container .timeb a {
+        border-color: rgb(188, 108, 37);
+        background: linear-gradient(to right, rgb(188, 108, 37) 50%, white 50%);
+        background-size: 200% 100%;
+        background-position: right bottom;
+        color: rgb(188, 108, 37);
+      }
+      .features .container .timeb:hover a {
+        background-position: left bottom;
+        color: white;
+      }
