add product and category to panel

--- a/templates/panel/panel.html
+++ b/templates/panel/panel.html
@@ -32,7 +32,7 @@
             View and edit Products
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'product_view_admin' %}">More</a>
       </div>
       <div class="box passion">
         <div class="text">
@@ -64,7 +64,7 @@
             View and edit Categories
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'Category_view' %}">More</a>
       </div>
       <div class="box passiona">
         <div class="text">
