--- a/templates/panel/product/product_detail_admin.html
+++ b/templates/panel/product/product_detail_admin.html
@@ -31,5 +31,8 @@
     </div>
 </div>
 
+<br>
+<p><a href="{% url 'product_update' product.pk %}" class="product_update"><b> + Edit product </b></a></p>
+<p><a href="{% url 'product_delete' product.pk %}" class="product_delete"><b> + Delete product </b></a></p>
 
 {% endblock content %}
