add supplier and city to panel

--- a/templates/panel/panel.html
+++ b/templates/panel/panel.html
@@ -55,7 +55,7 @@
             View and edit Suppliers
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'supplier_view' %}">More</a>
       </div>
       <div class="box timea">
         <div class="text">
@@ -64,7 +64,7 @@
             View and edit Categories
           </p>
         </div>
-        <a href="{% url 'Category_view' %}">More</a>
+        <a href="{% url 'category_view' %}">More</a>
       </div>
       <div class="box passiona">
         <div class="text">
@@ -87,7 +87,7 @@
             View and edit Cities
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'city_view' %}">More</a>
       </div>
     </div>
 </div>
