add inventory and stock to panel

--- a/templates/panel/panel.html
+++ b/templates/panel/panel.html
@@ -41,7 +41,7 @@
             View and edit Stock
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'stock_view' %}">More</a>
       </div>
     </div>
 </div>
@@ -73,7 +73,7 @@
             View and edit Inventories
           </p>
         </div>
-        <a href="#">More</a>
+        <a href="{% url 'inventory_view' %}">More</a>
       </div>
     </div>
 </div>
