--- a/templates/panel/category/category_view.html
+++ b/templates/panel/category/category_view.html
@@ -1,35 +1,28 @@
-<div class="p-5 space-y-3">
-    <div class="flex">
-        <div class="grow font-bold text-3xl text-primary">دسته بندی محصولات</div>
-        <div class="flex-none">
-            <a href="{% url 'category_create' %}" class="btn btn-square btn-success"><i class="fa-solid fa-plus text-2xl"></i></a>
+{% extends 'register_base.html' %}
+{% load static %}
+
+<head>
+    <title>Panel</title>
+    {% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesListView.css' %}">
+    {% endblock %}
+
+</head>
+
+{% block content %}
+<br><br><br>
+<p style="text-align:center" class="title">Categories - Admin Panel</p>
+<br><br>
+<div class="box-container">
+    {% for category in category_list %}
+    <div class="list-item">
+        <div class="list-title">{{ category.name }}</div>
+        <div class="list-buttons">
+            <button class="button-edit">Edit</button>
+            <button class="button-delete">Delete</button>
         </div>
     </div>
-
-    <div class="overflow-x-auto">
-        <table class="table table-zebra">
-          <!-- head -->
-          <thead>
-            <tr>
-              <th>نام</th>
-              <th class="text-end">عملیات</th>
-            </tr>
-          </thead>
-          <tbody>
-          {% for category in object_list %}
-            <!-- row 1 -->
-            <tr>
-              <th>{{ category.name }}</th>
-              <td class="text-end"><a
-                href="{% url 'category_delete' category.pk %}"
-                class="btn btn-square btn-error text-base"
-                ><i class="fa-solid fa-trash-can"></i
-              ></a></td>
-            </tr>
-          {% endfor %}
-          </tbody>
-        </table>
-      </div>
-     
-    
+    {% endfor %}
 </div>
+<br><br><br>
+{% endblock %}
