--- a/templates/panel/product/product_view_admin.html
+++ b/templates/panel/product/product_view_admin.html
@@ -6,7 +6,7 @@
 <!-- products -->
 <section class="products" id="products">
     <div class="heading">
-        <h2>Our new products</h2>
+        <h2>products - Admin Panel</h2>
     </div>
 
     <!-- container -->
