--- a/templates/panel/inventory/inventory_view.html
+++ b/templates/panel/inventory/inventory_view.html
@@ -18,7 +18,7 @@
     <div class="list-item">
         <div class="list-title">{{ inventory.name }}</div>
         <div class="list-buttons">
-            <button class="button-edit">Edit</button>
+            <a href="{% url 'inventory_update' inventory.pk %}"><button class="button-edit">Edit</button></a>
             <button class="button-delete">Delete</button>
         </div>
     </div>
