--- a/templates/panel/product/product_update.html
+++ b/templates/panel/product/product_update.html
@@ -1,11 +1,26 @@
-{% extends 'base.html' %}
+{% extends 'register_base.html' %}
+{% load static %}
+
+<head>
+    <title>Panel</title>
+    {% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesUpdateView.css' %}">
+    {% endblock %}
+
+</head>
+
 {% block content %}
-<br><br><br>
-
-<h1>Edit product</h1>
-<form action="" method="post">{% csrf_token %}
-{{ form.as_p }}
-<input type="submit" value="Update">
-</form>
-
-{% endblock content %}
+<br><br>
+<div class="update-view-container">
+  <h2 class="update-title">Update {{ object }}</h2>
+  <form method="post" class="update-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div class="update-buttons">
+      <button type="submit" class="update-btn update-btn-submit">Update</button>
+      <a class="update-btn update-btn-cancel" href="{% url 'product_detail_admin' product.pk %}">Cancel</a>
+    </div>
+  </form>
+</div>
+<br><br>
+{% endblock %}
