--- a/templates/panel/category/category_view.html
+++ b/templates/panel/category/category_view.html
@@ -19,7 +19,7 @@
         <div class="list-title">{{ category.name }}</div>
         <div class="list-buttons">
             <a href="{% url 'category_update' category.pk %}"><button class="button-edit">Edit</button></a>
-            <button class="button-delete">Delete</button>
+            <a href="{% url 'category_delete' category.pk %}"><button class="button-delete">Delete</button></a>
         </div>
     </div>
     {% endfor %}
