--- a/templates/panel/stock/stock_view.html
+++ b/templates/panel/stock/stock_view.html
@@ -22,7 +22,7 @@
                 quantity : {{ inventoryproduct.quantity }} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             <span class="list-buttons">
                 <a href="{% url 'stock_update' inventoryproduct.pk %}"><button class="button-edit">Edit</button></a>
-                <button class="button-delete">Delete</button>
+                <a href="{% url 'stock_delete' inventoryproduct.pk %}"><button class="button-delete">Delete</button></a>
             </span>
         </div>
         </div>
