--- a/templates/panel/product/product_create.html
+++ b/templates/panel/product/product_create.html
@@ -1,12 +1,26 @@
-{% extends 'base.html' %}
+{% extends 'register_base.html' %}
+{% load static %}
+
+<head>
+    <title>Panel</title>
+    {% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesUpdateView.css' %}">
+    {% endblock %}
+
+</head>
+
 {% block content %}
-<br><br><br>
-
-<h1>New Product</h1>
-<form action="" method="post">{% csrf_token %}
-<!-- {{ form.as_p }}  -->
-<label> product name </label> {{ form.name }} <br>
-<input type="submit" value="Save">
-</form>
-
-{% endblock content %}
+<br><br>
+<div class="update-view-container">
+  <h2 class="update-title">Create New product</h2>
+  <form method="post" class="update-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <div class="update-buttons">
+      <button type="submit" class="update-btn update-btn-submit">Create</button>
+      <a class="update-btn update-btn-cancel" href="{% url 'iproduct_view_admin' %}">Cancel</a>
+    </div>
+  </form>
+</div>
+<br><br>
+{% endblock %}
