--- a/templates/panel/product/product_delete.html
+++ b/templates/panel/product/product_delete.html
@@ -1,12 +1,27 @@
-{% extends 'base.html' %}
+{% extends 'register_base.html' %}
+{% load static %}
+
+<head>
+    <title>Panel</title>
+    {% block styles %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/stylesUpdateView.css' %}">
+    {% endblock %}
+
+</head>
+
 {% block content %}
-<br><br><br>
-
-<h1>Delete product</h1>
-<form action="" method="post">{% csrf_token %}
-<p>Are you sure you want to delete <strong>"{{ product.name }}"</strong> from <strong>"{{ product.supplier }}"</strong>?</p>
-<br>
-<input type="submit" value="Confirm">
-</form>
-
-{% endblock content %}
+<br><br>
+<div class="update-view-container">
+  <h2 class="update-title">Delete {{ object }}</h2>
+  <form method="post" class="update-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <p>Are you sure you want to delete <strong>"{{ product.name }}"</strong>?</p>
+    <div class="update-buttons">
+      <button type="submit" class="update-btn update-btn-delete">Delete</button>
+      <a class="update-btn update-btn-cancel" href="{% url 'product_view' product.pk %}">Cancel</a>
+    </div>
+  </form>
+</div>
+<br><br>
+{% endblock %}
