--- a/templates/register_base.html
+++ b/templates/register_base.html
@@ -34,15 +34,29 @@
             <i class='bx bx-cart-alt'></i>
             <i class='bx bx-search' id="search-icon"></i>
 
-            {% if user.is_authenticated %}
-            <a href="{% url 'logout' %}">
-                <i class='bx bx-user-circle'></i>
-            </a>
-            {% else %}
-            <a href="{% url 'login' %}">
-                <i class='bx bx-user-circle'></i>
-            </a>
-            {% endif %}
+            <span class="dropdown"> 
+                <button class="dropdown dropbtn">
+                    <i class='bx bx-user-circle'></i>
+                </button>
+                <div class="dropdown-content">
+                {% if user.is_authenticated %}
+                    {% if user.is_superuser %}
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% else %}    
+                        <li><a href="#">Cart</a></li>
+                        <li><a href="#">Order</a></li>
+                        <li><hr ></li>
+                        <li><a href="{% url 'logout' %}">Logout</a></li>
+                    {% endif %}
+
+                {% else %}
+                    <li><a href="{% url 'signup' %}">Signup</a></li>
+                    <li><hr></li>
+                    <li><a href="{% url 'login' %}">Login</a></li>
+
+                {% endif %}
+                </div>
+            </span>
 
         </div>
 
